[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/main_menu_scenes/door/door.gd" type="Script" id=1]
[ext_resource path="res://resources/runtime_data/runtime_data.tres" type="Resource" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 18.5, 10.5 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.760784, 0.760784, 0.760784, 1 )
metallic = 0.29

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 9.06392, 5.24367 )

[sub_resource type="Animation" id=4]
resource_name = "DoorOpen"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("RotationPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 4, 4.5948 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -100, 0 ) ]
}

[node name="Door" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.63956, 9.24325, 11.593 )
script = ExtResource( 1 )
_runtime_data = ExtResource( 2 )
_animation_player = NodePath("AnimationPlayer")

[node name="RotationPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38419e-07, 0, 5.4151 )

[node name="MeshInstance" type="MeshInstance" parent="RotationPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.4151 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DoorOpen = SubResource( 4 )
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
